[gd_scene load_steps=24 format=3 uid="uid://bq5yafi4m3kh"]

[ext_resource type="Script" uid="uid://d4lbfaqu04aje" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://cc64dhhsa5wo1" path="res://scenes/tetromino.tscn" id="2_sugp2"]
[ext_resource type="FontFile" uid="uid://coidjemf03q3x" path="res://fonts/PixelifySans-VariableFont_wght.ttf" id="3_sugp2"]
[ext_resource type="Script" uid="uid://csos6oxua3bxi" path="res://scripts/grid_arka_plan.gd" id="3_trceg"]
[ext_resource type="PackedScene" uid="uid://cerw3e6asohc2" path="res://scenes/loot_locker.tscn" id="4_jyhfs"]
[ext_resource type="Texture2D" uid="uid://dvdblqkkby87t" path="res://images/sol.png" id="4_tipki"]
[ext_resource type="Texture2D" uid="uid://dlbamd37cvhja" path="res://images/sağ.png" id="5_85g3d"]
[ext_resource type="Texture2D" uid="uid://bfhqjvt85rale" path="res://images/sol pressed.png" id="5_eb6dy"]
[ext_resource type="Texture2D" uid="uid://cifrkitq4jgv5" path="res://images/aşağı.png" id="6_choun"]
[ext_resource type="Texture2D" uid="uid://bxe4hgoas72k" path="res://images/sağ pressed.png" id="7_trceg"]
[ext_resource type="Texture2D" uid="uid://djxbcqhw7yd8j" path="res://images/döndür.png" id="7_ya4ey"]
[ext_resource type="Texture2D" uid="uid://qxw2tg7gpc0f" path="res://images/aşağı pressed.png" id="9_a8y0u"]
[ext_resource type="Texture2D" uid="uid://cjtq67ryj4bvi" path="res://images/döndür pressed.png" id="11_jkv2x"]
[ext_resource type="AudioStream" uid="uid://b5gilmf5fl3tp" path="res://sounds/hallopiki-Click-6.mp3" id="14_jkv2x"]
[ext_resource type="AudioStream" uid="uid://b60cjhgrixj5m" path="res://sounds/hallopiki-Click-8.mp3" id="15_jbj1t"]
[ext_resource type="AudioStream" uid="uid://16wr0avydmbt" path="res://sounds/hallopiki-Click-5.mp3" id="16_jbj1t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkv2x"]
bg_color = Color(0.28485027, 0.2848503, 0.28485018, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8y0u"]
bg_color = Color(0.8117647, 0.8117647, 0.76862746, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbj1t"]
size = Vector2(100, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tipki"]
size = Vector2(120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85g3d"]
size = Vector2(120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_choun"]
size = Vector2(120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya4ey"]
size = Vector2(120, 120)

[node name="main" type="Node2D"]
script = ExtResource("1_0wfyh")
tetromino_scene = ExtResource("2_sugp2")

[node name="OyunSahnesi" type="Node2D" parent="."]

[node name="Cerceve" type="ColorRect" parent="OyunSahnesi"]
offset_top = 43.0
offset_right = 312.0
offset_bottom = 655.0

[node name="ArkaPlan" type="ColorRect" parent="OyunSahnesi"]
offset_top = 50.0
offset_right = 312.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)
script = ExtResource("3_trceg")

[node name="SabitBloklar" type="Node2D" parent="OyunSahnesi"]

[node name="MenuKatmani" type="CanvasLayer" parent="."]
process_mode = 3

[node name="PuanLabel" type="Label" parent="MenuKatmani"]
offset_left = 64.0
offset_top = 4.0
offset_right = 224.0
offset_bottom = 38.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_sugp2")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuEkrani" type="Control" parent="MenuKatmani"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="MenuKatmani/MenuEkrani"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.90000004
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5882353)

[node name="Label" type="Label" parent="MenuKatmani/MenuEkrani"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -85.0
offset_right = 65.5
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.8392157, 0.05490196, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_sugp2")
theme_override_font_sizes/font_size = 40
text = "TETRON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaslaButon" type="Button" parent="MenuKatmani/MenuEkrani"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -23.5
offset_right = 50.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_sugp2")
theme_override_font_sizes/font_size = 28
text = "start"

[node name="AyarlarButon" type="Button" parent="MenuKatmani/MenuEkrani"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_top = 3.0
offset_right = -5.0
offset_bottom = 39.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_sugp2")
text = "SETTINGS"

[node name="KayitEkrani" type="Control" parent="MenuKatmani"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="Panel" parent="MenuKatmani/KayitEkrani"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jkv2x")

[node name="Label" type="Label" parent="MenuKatmani/KayitEkrani/ColorRect"]
process_mode = 3
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.5
offset_top = 24.0
offset_right = 111.5
offset_bottom = 91.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_sugp2")
theme_override_font_sizes/font_size = 26
text = "NEW RECORD. 
ENTER YOUR NAME: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="KaydetButon" type="Button" parent="MenuKatmani/KayitEkrani/ColorRect"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -36.0
offset_right = 31.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_sugp2")
theme_override_styles/normal = SubResource("StyleBoxFlat_a8y0u")
text = "save"

[node name="IsimInput" type="LineEdit" parent="MenuKatmani/KayitEkrani/ColorRect"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = 15.0
offset_right = 50.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_sugp2")
placeholder_text = "name..."
alignment = 1

[node name="KlavyeAcButon" type="TouchScreenButton" parent="MenuKatmani/KayitEkrani/ColorRect"]
modulate = Color(1, 1, 1, 0)
position = Vector2(149, 127)
shape = SubResource("RectangleShape2D_jbj1t")

[node name="AyarlarKutusu" type="ColorRect" parent="MenuKatmani"]
visible = false
custom_minimum_size = Vector2(200, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13319641, 0.13319641, 0.13319638, 1)

[node name="Label" type="Label" parent="MenuKatmani/AyarlarKutusu"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 49.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("3_sugp2")
text = "music"

[node name="SesSlider" type="HSlider" parent="MenuKatmani/AyarlarKutusu"]
layout_mode = 0
offset_left = 60.0
offset_top = 11.0
offset_right = 137.0
offset_bottom = 27.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="KapatButon" type="Button" parent="MenuKatmani/AyarlarKutusu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -31.0
offset_right = 24.5
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_sugp2")
text = "close"

[node name="SkorTablosuAcButon" type="Button" parent="MenuKatmani/AyarlarKutusu"]
layout_mode = 0
offset_left = 5.0
offset_top = 36.0
offset_right = 110.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("3_sugp2")
text = "score table"

[node name="LiderTablosuKutusu" type="Panel" parent="MenuKatmani"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkorTablosuGrid" type="GridContainer" parent="MenuKatmani/LiderTablosuKutusu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -225.0
offset_right = 125.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 20
columns = 3

[node name="TabloKapatButon" type="Button" parent="MenuKatmani/LiderTablosuKutusu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -56.0
offset_right = 24.5
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_sugp2")
text = "close"

[node name="DokunmatikKontroller" type="Control" parent="MenuKatmani"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = 6.0
offset_top = 661.0
offset_right = 305.0
offset_bottom = 714.0
mouse_filter = 2

[node name="sol" type="TouchScreenButton" parent="MenuKatmani/DokunmatikKontroller"]
position = Vector2(10, 5)
scale = Vector2(0.38260874, 0.33076918)
texture_normal = ExtResource("4_tipki")
texture_pressed = ExtResource("5_eb6dy")
shape = SubResource("RectangleShape2D_tipki")
action = "move_left"

[node name="sağ" type="TouchScreenButton" parent="MenuKatmani/DokunmatikKontroller"]
position = Vector2(85, 5)
scale = Vector2(0.373913, 0.33076906)
texture_normal = ExtResource("5_85g3d")
texture_pressed = ExtResource("7_trceg")
shape = SubResource("RectangleShape2D_85g3d")
action = "move_right"

[node name="aşağı" type="TouchScreenButton" parent="MenuKatmani/DokunmatikKontroller"]
position = Vector2(165, 5)
scale = Vector2(0.41509435, 0.30666682)
texture_normal = ExtResource("6_choun")
texture_pressed = ExtResource("9_a8y0u")
shape = SubResource("RectangleShape2D_choun")
action = "move_down"

[node name="döndür" type="TouchScreenButton" parent="MenuKatmani/DokunmatikKontroller"]
position = Vector2(245, 5)
scale = Vector2(0.3826087, 0.33846146)
texture_normal = ExtResource("7_ya4ey")
texture_pressed = ExtResource("11_jkv2x")
shape = SubResource("RectangleShape2D_ya4ey")
action = "switch"

[node name="DurdurButon" type="Button" parent="MenuKatmani"]
process_mode = 3
offset_left = 6.0
offset_top = 3.0
offset_right = 61.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("3_sugp2")
text = "PAUSE"

[node name="MuzikCalar" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="LootLocker" parent="." instance=ExtResource("4_jyhfs")]

[node name="SatirSilmeSesi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_jkv2x")
bus = &"SFX"

[node name="OyunBittiSesi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_jbj1t")
bus = &"SFX"

[node name="InmeSesi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_jbj1t")
bus = &"SFX"

[connection signal="pressed" from="MenuKatmani/MenuEkrani/BaslaButon" to="." method="_on_basla_buton_pressed"]
[connection signal="pressed" from="MenuKatmani/MenuEkrani/AyarlarButon" to="." method="_on_ayarlar_buton_pressed"]
[connection signal="pressed" from="MenuKatmani/KayitEkrani/ColorRect/KaydetButon" to="." method="_on_kaydet_buton_pressed"]
[connection signal="pressed" from="MenuKatmani/KayitEkrani/ColorRect/KlavyeAcButon" to="." method="_on_klavye_ac_buton_pressed"]
[connection signal="value_changed" from="MenuKatmani/AyarlarKutusu/SesSlider" to="." method="_on_ses_slider_value_changed"]
[connection signal="pressed" from="MenuKatmani/AyarlarKutusu/KapatButon" to="." method="_on_kapat_buton_pressed"]
[connection signal="pressed" from="MenuKatmani/AyarlarKutusu/SkorTablosuAcButon" to="." method="_on_skor_tablosu_ac_buton_pressed"]
[connection signal="pressed" from="MenuKatmani/LiderTablosuKutusu/TabloKapatButon" to="." method="_on_tablo_kapat_buton_pressed"]
[connection signal="pressed" from="MenuKatmani/DurdurButon" to="." method="_on_durdur_buton_pressed"]
